# RelOS

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/commands/: validate-mvp.md
.cursor/rules/: relos-ui.mdc
.github/workflows/: ci.yml
data/demo/: llm_extract_mock_relations.json  quick_alarms.json
docs/: PRD.md  agentnexus_relos_contract.md  api.md  architecture.md  complex_scenario_layering.md  complex_scenario_relos_demo_strategy.md  complex_scenario_relos_minimum_scope.md  data-model.md  demo-scenarios.md  deployment.md  design-plan.md  dev-plan.md  frontend_backend_alignment.md  high_value_business_stories.md  high_value_business_story_demo_guide.md  mvp-scope.md  mvp-validation.md  production_data_cleanup.md  quickstart.md  relos_workbench_v2.html  test-plan.md  user-manual.md  ux-flow.md
docs/interaction/: streaming-ux.md  streaming-wireframes.md
docs/todo/: streaming-ux-todolist.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
relos/: __init__.py  config.py  main.py
relos/action/: engine.py  repository.py  temporal_workflows.py
relos/context/: compiler.py
relos/core/: engine.py  models.py  repository.py
relos/decision/: composite.py  repository.py  workflow.py
relos/demo_data/: composite_decision_packages.json  llm_extract_mock_relations.json  quick_alarms.json  text_samples.json
scripts/: import_excel.py  seed_demo_scenarios.py  seed_neo4j.py  simulate_alarm.py
tests/: conftest.py
(+84 files in other folders)
