[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relos"
version = "0.1.0"
description = "RelOS - Relation Operating System for industrial AI"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Graph database
    "neo4j>=5.26.0",

    # LLM orchestration
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",

    # Cache / queue
    "redis[hiredis]>=5.2.0",

    # Utilities
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "mvp: MVP 核心场景测试（设备故障分析）",
    "integration: 需要外部服务的集成测试",
    "unit: 纯单元测试，无外部依赖",
]
